Fixed scrollbar (#1)
* Fixed scrollbar

* Added margin-bottom to buttons

--- a/src/App.css
+++ b/src/App.css
@@ -154,10 +154,12 @@ html, body {
 /* CONTENT */
 
 .content {
-  margin: 6vh;
+  padding: 6vh;
   font-family: 'Changa', sans-serif;
   color: var(--light);
   z-index: 2;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .content-title {
@@ -208,6 +210,7 @@ html, body {
 	text-decoration: none;
   text-shadow: 0px 1px 0px var(--alt);
   margin-right: 16px;
+  margin-bottom: 32px;
 }
 
 .button:active {
